--- a/CS/javascript/Calculator/index.html
+++ b/CS/javascript/Calculator/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width:device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <!--Add your elements for your calculator-->
+        <script src="script.js"></script>
+    </body>
+</html>
