--- a/CS/javascript/Calculator/index.html
+++ b/CS/javascript/Calculator/index.html
@@ -31,7 +31,7 @@
               
               <button onclick="appendNumber('0')">0</button>
               <button onclick="appendNumber('.')">.</button>
-              <button onclick="appendNumber('Del')">Del</button>
+              <button onclick="clearDisplay('AC')">AC</button>
               <button onclick="appendNumber('÷')">÷</button>
               <button onclick="appendNumber('=')">=</button>
     
