--- a/CS/javascript/Calculator/index.html
+++ b/CS/javascript/Calculator/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <form class="buttons">
-            <input type="text" id="display" disable />
+            <input type="text" id="display" />
             
              <form class="buttons">
                  
